fixed more complex patterns with temporary data using openACC update

--- a/examples/module_data_with_openACC/config/Makefile
+++ b/examples/module_data_with_openACC/config/Makefile
@@ -27,12 +27,14 @@ include ./MakesettingsGeneral
 include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
-time_profiling.o : helper_functions.o
+time_profiling.o: helper_functions.o
+helper_functions_gpu: helper_functions.o
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: ${USER_LIB} kernels.o kernels2.o kernels3.o my_module.o
-kernels.o: my_module.o
-kernels2.o: my_module.o
-kernels3.o: my_module.o
+example.o: kernels.o kernels2.o kernels3.o kernels4.o my_module.o helper_functions.o ${USER_LIB}
+kernels.o: my_module.o helper_functions.o
+kernels2.o: my_module.o helper_functions.o
+kernels3.o: my_module.o helper_functions.o
+kernels4.o: my_module.o helper_functions.o
