--- a/examples/particle/config/Makefile
+++ b/examples/particle/config/Makefile
@@ -27,9 +27,11 @@ include ./MakesettingsGeneral
 include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
+time_profiling.o: helper_functions.o
+helper_functions_gpu: helper_functions.o
+
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 particle.o : storage_order.F90 ../source/storage.h ${USER_LIB}
 particle_openACC.o : storage_order.F90 ../source/storage.h ${USER_LIB}
-time_profiling.o : helper_functions.o
 
