added remote execution option to test framework, fixed a bug that would lead to errors in the preprocessor, fixed the midaco example for latest PGI compiler (15.1)

--- a/examples/midaco_solver/config/Makefile
+++ b/examples/midaco_solver/config/Makefile
@@ -34,5 +34,5 @@ helper_functions_gpu: helper_functions.o
 # -------->
 
 example_MINLPc.o: midaco.o ${USER_LIB}
-benchmark.o: midaco.o ${USER_LIB}
+benchmark.o: midaco.o time_profiling.o ${USER_LIB}
 
