--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -95,6 +95,10 @@ ${USER_LIB}: $(OBJ)
 	$(call blueecho,"..........preprocessing $< in $(CURDIR)")
 	@< $< sed "s/\/\//¢/g" | gcc -E -w ${PFLAGS} - | tr "\`" '\n' | sed "s/¢/\/\//g" | sed '/^#/ d' > $@
 
+%.o: %.F90
+	$(call blueecho,"..........compiling $< in $(CURDIR)")
+	$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
+
 %.o: %.f90
 	$(call blueecho,"..........compiling $< in $(CURDIR)")
 	$(FC) $(FFLAGS) $(PFLAGS) -c $< -o $@
