--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -639,13 +639,14 @@ ${SRC_DIR_HFPP}%.h90: %.h90
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_HFPP} && cp -fp $< $@
 
-${SRC_DIR_CPU}%.P90: ${SRC_DIR_HFPP}%.h90 ${DIR_CPU}implementationNamesByTemplate ${CG_DIR}${CPU_CALLGRAPH_FILE}
-	$(call yellowecho,"...........converting $(notdir $<) by calling 'generateF90fromH90AndAnalyzedCallGraph.py -i $< -c ${CG_DIR}${CPU_CALLGRAPH_FILE} --implementation=${DIR_CPU}implementationNamesByTemplate --optionFlags=${OPTION_FLAGS} ${H90_PREPROCESSOR_ARGS}'")
-	@python ${TOOLSDIR}/generateF90fromH90AndAnalyzedCallGraph.py -i $< -c ${CG_DIR}${CPU_CALLGRAPH_FILE} --implementation=${DIR_CPU}implementationNamesByTemplate --optionFlags=${OPTION_FLAGS} ${H90_PREPROCESSOR_ARGS} > $@
+define generate_p90_rules
+$(1)%.P90: ${SRC_DIR_HFPP}%.h90 $(2)implementationNamesByTemplate ${CG_DIR}$(3)
+	@$$(call yellowecho,"...........converting $$(notdir $$<)")
+	@${HF_DIR}/hf_bin/convert.sh $$< $$@ ${CG_DIR}$(3) $(2) $(1) ${H90_PREPROCESSOR_ARGS} ${OPTION_FLAGS}
+endef
 
-${SRC_DIR_GPU}%.P90: ${SRC_DIR_HFPP}%.h90 ${DIR_GPU}implementationNamesByTemplate ${CG_DIR}${GPU_CALLGRAPH_FILE}
-	$(call yellowecho,"...........converting $(notdir $<) by calling 'generateF90fromH90AndAnalyzedCallGraph.py -i $< -c ${CG_DIR}${GPU_CALLGRAPH_FILE} --implementation=${DIR_GPU}implementationNamesByTemplate --optionFlags=${OPTION_FLAGS} ${H90_PREPROCESSOR_ARGS}'")
-	@python ${TOOLSDIR}/generateF90fromH90AndAnalyzedCallGraph.py -i $< -c ${CG_DIR}${GPU_CALLGRAPH_FILE} --implementation=${DIR_GPU}implementationNamesByTemplate --optionFlags=${OPTION_FLAGS} ${H90_PREPROCESSOR_ARGS} > $@
+$(eval $(call generate_p90_rules,${SRC_DIR_CPU},${DIR_CPU},${CPU_CALLGRAPH_FILE}))
+$(eval $(call generate_p90_rules,${SRC_DIR_GPU},${DIR_GPU},${GPU_CALLGRAPH_FILE}))
 
 ${SRC_DIR_HFPP}%.h90: %.H90
 	@echo ...........preprocessing file $@
