modularization of build system

--- a/examples/openACC_hybrid_hostonly/config/Makefile
+++ b/examples/openACC_hybrid_hostonly/config/Makefile
@@ -28,10 +28,10 @@ include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
 time_profiling.o: helper_functions.o
-helper_functions_gpu: helper_functions.o
+helper_functions_gpu.o: helper_functions.o
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: ${USER_LIB}
+example.o: ${USER_LIB} helper_functions_gpu.o
 
