--- a/hf_processor/MakefileForCompilationTemplate
+++ b/hf_processor/MakefileForCompilationTemplate
@@ -28,7 +28,7 @@ include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
 time_profiling.o: helper_functions.o
-helper_functions_gpu: helper_functions.o
+helper_functions_gpu.o: helper_functions.o
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
