build system now supports accuracy test data parameters in order to switch between 4/8 byte and big/little endian

--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -205,16 +205,19 @@ DEFAULT_TEST_EXECUTABLES=1
 endif
 ifeq (${DEFAULT_TEST_EXECUTABLES}, 1)
 
-TEST_TARGET_CPU = ${INSTALLED_EXECUTABLES_CPU}
-TEST_TARGET_GPU = ${INSTALLED_EXECUTABLES_GPU}
+TEST_TARGET_CPU=${INSTALLED_EXECUTABLES_CPU}
+TEST_TARGET_GPU=${INSTALLED_EXECUTABLES_GPU}
 
 else
 
 TEST_EXECUTABLES_POST=$(subst ",,${TEST_EXECUTABLES})
-TEST_TARGET_CPU = ${TEST_EXECUTABLES_POST}
-TEST_TARGET_GPU = ${TEST_EXECUTABLES_POST}
+TEST_TARGET_CPU=${TEST_EXECUTABLES_POST}
+TEST_TARGET_GPU=${TEST_EXECUTABLES_POST}
 
 endif
+
+TEST_OUTPUT_FILE_PATTERN_POST=$(subst ",,${TEST_OUTPUT_FILE_PATTERN})
+ACCURACY_TEST_PARAMETERS_POST=$(subst ",,${ACCURACY_TEST_PARAMETERS})
 
 ADDITIONAL_CLEANUPS_CPU= clean_installed_executables_cpu
 ADDITIONAL_CLEANUPS_GPU= clean_installed_executables_gpu
@@ -392,14 +395,14 @@ tests: tests_cpu tests_gpu
 
 ifdef DEBUG
 tests_cpu: ${INSTALL_TARGETS_CPU}
-	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_CPU}" debug cpu ${TEST_OUTPUT_FILE_PATTERN} ${SOURCE_THIS_BEFORE_TESTING} ${SOURCE_THIS_AFTER_TESTING}
+	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_CPU}" debug cpu "${TEST_OUTPUT_FILE_PATTERN_POST}" "${SOURCE_THIS_BEFORE_TESTING}" "${SOURCE_THIS_AFTER_TESTING}" "${ACCURACY_TEST_PARAMETERS_POST}"
 else
 tests_cpu: ${INSTALL_TARGETS_CPU}
-	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_CPU}" production cpu ${TEST_OUTPUT_FILE_PATTERN} ${SOURCE_THIS_BEFORE_TESTING} ${SOURCE_THIS_AFTER_TESTING}
+	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_CPU}" production cpu "${TEST_OUTPUT_FILE_PATTERN_POST}" "${SOURCE_THIS_BEFORE_TESTING}" "${SOURCE_THIS_AFTER_TESTING}" "${ACCURACY_TEST_PARAMETERS_POST}"
 endif
 
 tests_gpu: ${INSTALL_TARGETS_GPU}
-	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_GPU}" production gpu ${TEST_OUTPUT_FILE_PATTERN} ${SOURCE_THIS_BEFORE_TESTING} ${SOURCE_THIS_AFTER_TESTING}
+	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_GPU}" production gpu "${TEST_OUTPUT_FILE_PATTERN_POST}" "${SOURCE_THIS_BEFORE_TESTING}" "${SOURCE_THIS_AFTER_TESTING}" "${ACCURACY_TEST_PARAMETERS_POST}"
 
 configfiles_cpu:
 	@echo ...copying config files to ${SRC_DIR_CPU}
